remove local configuration